[package]
name = "cep18"
version = "1.0.0"
edition = "2018"
description = "A library for developing CEP-18 tokens for the Casper network."
readme = "README.md"
documentation = "https://docs.rs/casper-cep18"
homepage = "https://casperlabs.io"
repository = "https://github.com/casper-ecosystem/cep18"
license-file = "../LICENSE"

[[bin]]
name = "cep18"
path = "src/main.rs"
bench = false
doctest = false
test = false

[dependencies]
base64 = { version = "0.20.0", default-features = false, features = ["alloc"] }
casper-contract = {version = "2.0.0", features = ["test-support"]}
casper-types = "2.0.0"
hex = { version = "0.4.3", default-features = false }
once_cell = { version = "1.16.0", default-features = false }
casper-event-standard = { version = "0.3.0", default-features = false }
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1", features = ["derive", "alloc"], default-features = false }
casper_types_derive = "0.1.0"
